# njord

./: .gitignore  Cargo.toml  build.rs
src/: crypto_price.rs  main.rs  time.rs
ui/: app-window.slint
