[package]
name = "njord"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.36.0"
slint = "1.8.0"
chrono = "0.4.39"

[build-dependencies]
slint-build = "1.8.0"
winres = "0.1.12"